# ark-curves

bls12_377/: Cargo.toml
ed_on_bw6_761/: Cargo.toml
ed_on_cp6_782/: Cargo.toml
