[package]
name = "ark-bls12-377"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "The BLS12-377 pairing-friendly elliptic curve"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/curves"
documentation = "https://docs.rs/ark-bls12-377/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-ff = {git = "https://github.com/ChorusOne/ark-algebra", branch = "giulio/random", default-features = false }
ark-ec = {git = "https://github.com/ChorusOne/ark-algebra", branch = "giulio/random", default-features = false }
ark-r1cs-std = {git = "https://github.com/ChorusOne/ark-r1cs-std", branch = "giulio/random", default-features = false, optional = true }
ark-std = {git = "https://github.com/ChorusOne/ark-std", branch = "giulio/random_feature", default-features = false }

[dev-dependencies]
ark-relations = { version="^0.3.0", default-features = false }
ark-serialize = { version="^0.3.0", default-features = false }
ark-algebra-test-templates = { version="^0.3.0", default-features = false }
ark-curve-constraint-tests = { path = "../curve-constraint-tests", default-features = false }

[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

curve = [ "scalar_field", "base_field" ]
scalar_field = []
base_field = []
r1cs = [ "base_field", "ark-r1cs-std" ]