[package]
name = "ark-ed-on-cp6-782"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "A Twisted Edwards curve defined over the scalar field of the CP6-782 curve"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/curves"
documentation = "https://docs.rs/ark-ed-on-cp6-782/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-ff = {git = "https://github.com/ChorusOne/ark-algebra", branch = "giulio/random", default-features = false }
ark-ec = {git = "https://github.com/ChorusOne/ark-algebra", branch = "giulio/random", default-features = false }
ark-std = {git = "https://github.com/ChorusOne/ark-std", branch = "giulio/random_feature", default-features = false }
ark-r1cs-std = {git = "https://github.com/ChorusOne/ark-r1cs-std", branch = "giulio/random", default-features = false, optional = true }
ark-bls12-377 = {path = "../bls12_377", default-features = false, features = [ "base_field" ] }

[dev-dependencies]
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-algebra-test-templates = { version = "^0.3.0", default-features = false }
ark-curve-constraint-tests = { path = "../curve-constraint-tests", default-features = false }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std", "ark-bls12-377/std" ]
r1cs = ["ark-r1cs-std"]
